# lehighdrawings

./: mask.py  mask_box1_tube10_doc010.tif  pyproject.toml
