[tool.poetry]
name = "lehighdrawings-masks"
version = "0.1.0"
description = "Create mask for lehighdrawings-dataset"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "lehighdrawings_masks"}]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.7.0.72"
numba = "^0.56.4"

[tool.poetry.scripts]
mask = "mask.main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
